prevent twitter button from overflowing viewport

--- a/app/assets/stylesheets/mobile/resources/projects/_show.sass
+++ b/app/assets/stylesheets/mobile/resources/projects/_show.sass
@@ -131,4 +131,5 @@
 		display: inline-block
 	#twitter
 		float: right
-		width: 74px
+		width: 75px
+		overflow: hidden
